<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.miracostacollege.cs134.treasuredlogin.TreasureActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:layout_marginTop="@dimen/title_bottom_margin"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/pirates_booty"
        android:src="@drawable/treasure"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_bottom_margin"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/pirates_booty"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"/>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_bottom_margin"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/sign_out"
        android:onClick="handleSignOut"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>


</LinearLayout>
